--- a/challenge/Develop/assets/css/style.css
+++ b/challenge/Develop/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -36,7 +36,7 @@ body {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -73,6 +73,7 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+    
 }
 
 .benefits {
@@ -86,11 +87,11 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-lead,.benefit-brand,.benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
+/*  Consolodated this code / unecessary repeat
 .benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
@@ -100,12 +101,12 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
-.benefit-lead h3 {
+*/
+.benefit-lead h3,.benefit-brand h3,.benefit-cost h3{
     margin-bottom: 10px;
     text-align: center;
 }
-
+/* Repreat code
 .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -115,13 +116,13 @@ p {
     margin-bottom: 10px;
     text-align: center;
 }
-
-.benefit-lead img {
+*/
+.benefit-lead img,.benefit-brand img,.benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* 
 .benefit-brand img {
     display: block;
     margin: 10px auto;
@@ -133,8 +134,8 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
-.search-engine-optimization {
+*/
+.search-engine-optimization,.online-reputation-management,.social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -142,7 +143,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/*
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
@@ -160,11 +161,12 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
-.search-engine-optimization img {
+*/
+.search-engine-optimization img,.online-reputation-management img,
+.social-media-marketing img {
     max-height: 200px;
 }
-
+/* REPEAT CODE
 .online-reputation-management img {
     max-height: 200px;
 }
@@ -172,12 +174,14 @@ p {
 .social-media-marketing img {
     max-height: 200px;
 }
-
-.search-engine-optimization h2 {
+*/
+.search-engine-optimization h2,
+.online-reputation-management h2,
+.social-media-marketing h2{
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/* REPEAT CODE
 .online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -187,7 +191,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+*/
 .footer {
     padding: 30px;
     clear: both;
